--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.5",
     "embla-carousel-react": "8.0.0-rc12",
+    "flag-icons": "^6.11.0",
     "lucide-react": "^0.269.0",
     "mysql2": "^3.6.0",
     "next": "13.4.19",
