ad translation for store pages using /islands/message.tsx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,9 @@
 
   // VSCode Config
   "editor.tabSize": 2,
-  "editor.codeActionsOnSave": { "source.fixAll": false },
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "never"
+  },
   "editor.formatOnSave": true,
   "editor.unicodeHighlight.allowedCharacters": {
     "a": true,
